--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <img src="logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/pic1.png">
+                    <img src="pic1.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -86,7 +86,7 @@
          <h1 class="sub-title">My work</h1>
          <div class="work-list">
             <div class="work">
-                <img src="images/work-1.png">
+                <img src="work-1.png">
                 <div class="layer">
                     <h3>PHONE APP</h3>
                     <p>I designed a mobile phone app with a modern and intuitive UI/UX. The design ensures smooth navigation, clear icons, and responsive layouts. I created wireframes and prototypes in Figma, focusing on usability, consistency, and accessibility to deliver an engaging and seamless user experience across Android and iOS devices.
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png">
+                <img src="work-2.png">
                    <div class="layer">
                     <h3>FOOD APP</h3>
                     <p>I designed a food delivery app focusing on a clean and user-friendly UI/UX. The app includes easy navigation, food category browsing, cart management, and secure checkout flow. I created wireframes and prototypes using Figma, ensuring consistency, accessibility, and engaging visuals to improve customer experience.
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.png">
+                <img src="work-3.png">
                    <div class="layer">
                     <h3>PHONE APP</h3>
                     <p>fI designed a bus timetable website with a simple and user-friendly UI/UX. The site allows users to easily search routes, check bus timings, and view schedules. I used Figma to create wireframes and prototypes, focusing on clarity, consistency, and accessibility for a smooth browsing experience.
@@ -171,4 +171,5 @@
         }
     </script>
 </body>
+
 </html>
